--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.5.6",
     "flag-icons": "^6.7.0",
+    "flowbite": "^2.4.1",
+    "flowbite-react": "^0.10.1",
     "next": "^13.5.6",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -21,9 +23,12 @@
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.8.0",
     "swiper": "^9.4.1",
+    "tw-elements": "^2.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
     "tailwind-scrollbar": "^3.0.4",
